<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:id="@+id/mainLayout"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/left3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/ms"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/right4"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delaySeekBar_L"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="20dp"
        android:text="@string/左"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/left3"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delaySeekBar_R"
        android:layout_marginBottom="20dp"
        android:text="@string/右"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/curDelay_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delaySeekBar_R"
        android:layout_gravity="center"
        android:layout_marginStart="-8dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/left3"
        android:text="@string/_0_ms"
        android:visibility="visible"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/curDelay_L"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delaySeekBar_L"
        android:layout_marginStart="-8dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/right4"
        android:orientation="vertical"
        android:text="@string/_0_ms"
        android:visibility="visible"
        tools:textSize="24sp" />

    <SeekBar
        android:id="@+id/delaySeekBar_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:background="#ccc"
        android:max="20"
        android:maxHeight="20dp"
        android:minHeight="40dp"
        android:progress="0"
        tools:maxWidth="30dp" />

    <SeekBar
        android:id="@+id/delaySeekBar_R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="320dp"
        android:background="#ccc"
        android:max="@android:integer/config_shortAnimTime"
        android:maxHeight="40dp"
        android:minHeight="40dp"
        android:progress="0"
        tools:maxWidth="30dp" />

    <Button
        android:id="@+id/switch1"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:onClick="onEchoClick"
        android:text="@string/start_delay"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/get_parameter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="getLowLatencyParameters"
        android:text="@string/cmd_get_param"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/statusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:lines="3"
        android:text="@string/init_status_msg" />

</RelativeLayout>
