<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:id="@+id/mainLayout"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/curDelay_L2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="258dp"
        android:text="@string/_0_ms"
        android:visibility="visible"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delaySeekBar_R"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="220dp"
        android:gravity="center"
        android:text="@string/ms"
        android:textColor="#000"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/right4"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/curDelay_L"
        android:layout_marginEnd="-42dp"
        android:layout_marginBottom="-140dp"
        android:layout_toStartOf="@+id/curDelay_R"
        android:text="@string/左"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/left3"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/curDelay_R"
        android:layout_marginEnd="-42dp"
        android:layout_marginBottom="-150dp"
        android:layout_toStartOf="@+id/curDelay_L"
        android:text="@string/右"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/curDelay_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delaySeekBar_R"
        android:layout_alignStart="@+id/switch1"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="170dp"
        android:text="@string/_0_ms"
        android:visibility="visible"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/curDelay_L"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="258dp"
        android:text="@string/_0_ms"
        android:visibility="visible"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/minDelayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minDelayLabel6"
        android:layout_gravity="start"
        android:layout_marginStart="14dp"
        android:layout_marginTop="93dp"
        android:text="@string/min_delay_label_msg"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/minDelayLabel6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curDelay_L"
        android:layout_gravity="start"
        android:layout_marginTop="-112dp"
        android:text="@string/min_delay_label_msg"
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/delaySeekBar_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="18dp"
        android:background="#ccc"
        android:max="20"
        android:maxHeight="40dp"
        android:minHeight="40dp"
        android:progress="0" />

    <SeekBar
        android:id="@+id/delaySeekBar_R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minDelayLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-150dp"
        android:layout_marginEnd="13dp"
        android:layout_toEndOf="@+id/minDelayLabel6"
        android:background="#ccc"
        android:max="@android:integer/config_shortAnimTime"
        android:maxHeight="40dp"
        android:minHeight="40dp"
        android:progress="0" />

    <Button
        android:id="@+id/switch1"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delaySeekBar_L"
        android:layout_marginTop="29dp"
        android:minHeight="50dp"
        android:onClick="onEchoClick"
        android:text="@string/start_delay"
        android:textAllCaps="false"
        tools:maxHeight="60dp"
        tools:maxWidth="20dp" />

    <Button
        android:id="@+id/get_parameter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="30dp"
        android:onClick="getLowLatencyParameters"
        android:text="@string/cmd_get_param"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/statusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_parameter_button"
        android:layout_alignEnd="@+id/switch1"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="173dp"
        android:lines="3"
        android:text="@string/init_status_msg" />

</RelativeLayout>


